<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.UserProfileInfoFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/first_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/margin_30"
        android:layout_marginEnd="@dimen/margin_30"
        android:layout_marginTop="@dimen/margin_10"
        android:hint="@string/hint_first_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/first_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_30"
        android:layout_marginEnd="@dimen/margin_30"
        android:maxLines="1"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:hint="@string/first_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_name_text" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/last_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="normal"
        android:layout_marginStart="@dimen/margin_30"
        android:layout_marginEnd="@dimen/margin_30"
        android:text="@string/hint_last_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_name_edit_text" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/last_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_30"
        android:layout_marginEnd="@dimen/margin_30"
        android:maxLines="1"
        android:inputType="text"
        android:hint="@string/last_name"
        android:imeOptions="actionDone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/last_name_text" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dob_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/margin_30"
        android:layout_marginEnd="@dimen/margin_30"
        android:hint="@string/hint_date_of_birth"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/last_name_edit_text" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/dob_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_30"
        android:layout_marginEnd="@dimen/margin_30"
        android:maxLines="1"
        android:imeOptions="actionNext"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/enter_dob_text"
        android:inputType="none"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dob_text" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/next_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dob_date" />

</androidx.constraintlayout.widget.ConstraintLayout>